--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -121,11 +121,11 @@
     <string name="empty_list_archive_desc">Pidä kirjaa entisistä kilvistäsi. Arkistoon voi lisätä kilpiä manuaalisesti tai arkistoimalla jo olemassa olevan kilven.</string>
     <string name="sort_by_country_and_age_asc">Valtio ja ikä, nouseva</string>
     <string name="sort_by_country_and_age_desc">Valtio ja ikä, laskeva</string>
-    <string name="transfer_from_wishlist_dialog_text">Tämän pohjalta luodaan uusi kilpi, ja tämä puolestaan poistetaan toivelistalta.</string>
+    <string name="transfer_from_wishlist_dialog_text">Tämän listauksen pohjalta luodaan uusi kilpi, ja listaus puolestaan poistetaan toivelistalta.</string>
     <string name="transfer_from_plates_dialog_title">Arkistoi <xliff:g name="reg_no" example="ABC-123">%s</xliff:g>?</string>
     <string name="transfer_from_plates_dialog_text">Kilvestä luodaan kopio arkistoon ja tämä kilpi poistetaan.</string>
-    <string name="transfer_from_wishlist_dialog_title">Merkkaa toteutuneeksi?</string>
-    <string name="transfer_from_wishlist_button">Merkkaa toteutuneeksi</string>
+    <string name="transfer_from_wishlist_dialog_title">Luo kilpi ja poista toivelistalta?</string>
+    <string name="transfer_from_wishlist_button">Luo kilpi poistaen</string>
     <string name="transfer_from_plates_button">Arkistoi</string>
     <plurals name="plates_list_size">
         <item quantity="one">%d kilpi</item>
@@ -231,4 +231,7 @@
     <string name="measurement_width">Leveys</string>
     <string name="measurement_height">Korkeus</string>
     <string name="settings_general">Yleiset</string>
+    <string name="check_wishlist_dialog_title">Luo kilpi?</string>
+    <string name="check_wishlist_dialog_text">Tämän listauksen pohjalta luodaan uusi kilpi.</string>
+    <string name="check_wishlist_button">Luo kilpi</string>
 </resources>
