Add labels for Common & UniqueDetails. Adjust color scheme and spacing across screens. Modify MenuDrawer behavior in regards to Settings & Help

--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -236,4 +236,8 @@
     <string name="check_wishlist_button">Luo kilpi</string>
     <string name="color_base">Pohja</string>
     <string name="color_characters">Merkit</string>
+    <string name="common_details_label">Perustiedot</string>
+    <string name="size_and_color">Koko ja väri</string>
+    <string name="unique_details_label">Yksityiskohdat</string>
+    <string name="size">Koko</string>
 </resources>
